--- a/README.html
+++ b/README.html
@@ -1,13 +1,14 @@
 <p><img src="http://www.matrixssl.org/assets/img/matrixssl_logo_transparent_md.png" alt="MatrixSSL Banner" title="" /></p>
 
 <p>Lightweight Embedded SSL/TLS Implementation
-<em>Official source repository of matrixssl.org</em></p>
+
+<em>Official source repository of MatrixSSL</em></p>
 
 <p><a href="https://github.com/matrixssl/matrixssl/releases"><img src="http://www.matrixssl.org/shield.svg" alt="release" title="" /></a>
+
 <img src="https://img.shields.io/badge/License-GPL-blue.svg" alt="license" title="" /></p>
 
-<p><a href="https://github.com/RUB-NDS/TLS-Attacker"><img src="http://www.matrixssl.org/assets/svg/status-tls-attacker.svg" alt="tls-attacker-status" title="" /></a>
-<a href="https://scan.coverity.com/projects/matrixssl-matrixssl"><img src="https://scan.coverity.com/projects/8611/badge.svg" alt="coverity-status" title="" /></a></p>
+<p><a href="https://scan.coverity.com/projects/matrixssl-matrixssl"><img src="https://scan.coverity.com/projects/8611/badge.svg" alt="coverity-status" title="" /></a></p>
 
 <h2>Overview</h2>
 
@@ -18,8 +19,8 @@
 
 <h2>Reporting Issues</h2>
 
-<p>Please email support@matrixssl.org.
-Sensitive emails can be encrypted using the public key in this directory <a href="https://raw.githubusercontent.com/matrixssl/matrixssl/master/pgp.asc">pgp.asc</a>, Key fingerprint = <code>D6AD F1C5 E34E 696B 0953  556C 8BB2 B39A 2795 C6B3</code>.</p>
+<p>Please email matrixssl@rambus.com.
+Sensitive emails can be encrypted using the public key in this directory <a href="https://raw.githubusercontent.com/matrixssl/matrixssl/master/pgp.asc">pgp.asc</a>, Key fingerprint = <code>C714 FAC4 3D95 3584 9926  25EB 4F08 F506 433F 9237</code>.</p>
 
 <h2>Features</h2>
 
@@ -33,6 +34,7 @@ Sensitive emails can be encrypted using the public key in this directory <a href
 <li>Server Name Indication and Stateless Session Tickets</li>
 <li>RFC7301 Application Protocol Negotiation</li>
 <li>Server and client X.509 certificate chain authentication</li>
+<li>Client authentication with an external security token</li>
 <li>Parsing of X.509 .pem and ASN.1 DER certificate formats</li>
 <li>PKCS#1.5, PKCS#5 PKCS#8 and PKCS#12 support for key formatting</li>
 <li>RSASSA-PSS Signature Algorithm support</li>
